Use the factory methods from the java.util.List interface